# mystash

./: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
src/: example.env
src/RecordLifecycle/application/Repositories/: VideogameRecordRepository.py
src/RecordLifecycle/domain/: Record.py  VideogameRecord.py
src/RecordLifecycle/domain/Entities/: AlbumRecord.py  Record.py  SongRecord.py  VideogameRecord.py
src/RecordLifecycle/domain/Repositories/: AlbumRecordRepository.py  SongRecordRepository.py  VideogameRecordRepository.py
src/RecordLifecycle/domain/ValueObjects/: AlbumDuration.py  ArtistName.py  AuthorId.py  CreationDate.py  GenreName.py  MongoUrl.py  RecordId.py  RecordTitle.py  SongDuration.py  SongNumber.py  TrackList.py  VideogameDescription.py  VideogamePlaytime.py  VideogameRating.py  __init__.py
src/RecordLifecycle/infrastructure/: main.py
src/RecordLifecycle/infrastructure/Controllers/: CreateVideogameRecord.py  DeleteVideogameRecord.py  GetUserVideogameRecords.py  GetVideogameRecord.py  UpdateVideogameRecord.py  VideogameRecordApi.py
src/RecordLifecycle/infrastructure/Controllers/AlbumRecords/: CreateAlbumRecord.py  DeleteAlbumRecord.py  GetAlbumRecord.py  GetUserAlbumRecords.py  UpdateAlbumRecord.py
src/RecordLifecycle/infrastructure/Persistance/: AlbumMongodbRepo.py  AlbumRecordRepositoryImpl.py  SongRecordRepositoryImpl.py  VideogameMongodbRepo.py  VideogameRecordRepositoryImpl.py
src/RecordLifecycle/tests/: test_get_videogame_record_by_id.py  test_videogames_records.py
(+40 files in other folders)
