[project]
name = "mystash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.116.1",
    "pydantic==2.11.7",
    "pymongo==4.14.0",
    "pytest==8.4.1",
    "python-dotenv>=1.2.2",
    "uvicorn==0.35.0",
]
